Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1264

LRU RAM cache not accounting for overhead

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 3.1.3
    • 5.3.0
    • Cache
    • None

    Description

      The CLFUS RAM cache takes its overhead into account when determining how many bytes it is using. The LRU cache does not, which makes it hard to compare performance between the two and hard to correctly size the LRU RAM cache.

      Attachments

        1. ram_cache.patch
          6 kB
          John Plevyak

        Issue Links

          Activity

            People

              jplevyak John Plevyak
              jplevyak John Plevyak
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: