TS-1264: account for overhead in LRU cache. Add RamCache regression test. Fix hit accounting for history in CLFUS Ram cache.